--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 # archivos fuente o con copyright de la documentación
-docs/libro.pdf
-docs/*.aux
-docs/*.log
-docs/*.tex
-docs/*.synctex.gz
-
+*libro*
+*.aux
+*.log
+*.synctex.gz
+# datos
+*.txt
+*.gcx
+# administrativo
+*.tex
+*solucion/*
+*resultados*
 # archivos propios del IDE (Pycharm)
-programas/.idea/
+.idea/*
